--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"> <html lang="en"> <head> <meta http-equiv="content-type" content="text/html; charset=utf-8"> <title>Title Goes Here</title> </head> <body> <p>This is my web page</p> </body> </html>
+<!DOCTYPE HTML> <html lang="en"> <head> <meta http-equiv="content-type" content="text/html; charset=utf-8"> <title>Abbott Agenda</title> </head> <body> 
+<div>
+<img src="agenda.jpg" width="1820" height="2484" alt="Agenda">
+</div> 
+</body> 
+</html>
